{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 1450,
  "lineage": "791a686c-354b-24b6-fc5d-8a90aea78bf8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jboloneip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9990da3cb902ed9",
            "association_id": "eipassoc-0628e907bb99cdd03",
            "domain": "vpc",
            "id": "eipalloc-0b9990da3cb902ed9",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-04d372cef83a9379c",
            "private_dns": "ip-10-100-1-57.ap-southeast-2.compute.internal",
            "private_ip": "10.100.1.57",
            "public_dns": "ec2-54-79-89-6.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.89.6",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jbolonbastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055166f8a8041fbf1",
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:instance/i-0596e02bf0eaeecf4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "skillup-j.bolon-readonly",
            "id": "i-0596e02bf0eaeecf4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "skillup-j.bolon-pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-021cd071b4880f5cd",
            "private_dns": "ip-10-100-2-106.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.2.106",
            "public_ip": "54.79.3.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02351ebe3841fd852",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce47cb21ad685028",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-bastion"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b7f6ad8124e4d72"
            ]
          },
          "dependencies": [
            "aws_security_group.jbolonbastionsg",
            "aws_subnet.jbolonpubsub2b",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jbolonigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:internet-gateway/igw-03e4340c1b5b42e74",
            "id": "igw-03e4340c1b5b42e74",
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-igw"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-igw"
            },
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jbolonalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:594123181409:loadbalancer/app/skillup-jbolon-alb/92ccdd9111cbafa7",
            "arn_suffix": "app/skillup-jbolon-alb/92ccdd9111cbafa7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "skillup-jbolon-alb-929645743.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:594123181409:loadbalancer/app/skillup-jbolon-alb/92ccdd9111cbafa7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "skillup-jbolon-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f70ff4d9ae45edab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bad28ab37460af29"
              },
              {
                "subnet_id": "subnet-0ce47cb21ad685028"
              }
            ],
            "subnets": [
              "subnet-0bad28ab37460af29",
              "subnet-0ce47cb21ad685028"
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-alb"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-alb"
            },
            "vpc_id": "vpc-01a846bb50064a0f6",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.jbolonalbsg",
            "aws_subnet.jbolonpubsub2a",
            "aws_subnet.jbolonpubsub2b",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jbolonlistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:594123181409:listener/app/skillup-jbolon-alb/92ccdd9111cbafa7/c521e1a41a4bae55",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:594123181409:targetgroup/skillup-jbolon-tg/9d3858b26ccf7480",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:594123181409:listener/app/skillup-jbolon-alb/92ccdd9111cbafa7/c521e1a41a4bae55",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:594123181409:loadbalancer/app/skillup-jbolon-alb/92ccdd9111cbafa7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jbolonalb",
            "aws_lb_target_group.jbolontg",
            "aws_security_group.jbolonalbsg",
            "aws_subnet.jbolonpubsub2a",
            "aws_subnet.jbolonpubsub2b",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jbolontg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:594123181409:targetgroup/skillup-jbolon-tg/9d3858b26ccf7480",
            "arn_suffix": "targetgroup/skillup-jbolon-tg/9d3858b26ccf7480",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 200,
                "matcher": "200-499",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:594123181409:targetgroup/skillup-jbolon-tg/9d3858b26ccf7480",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "skillup-jbolon-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-tg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jbolonnat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9990da3cb902ed9",
            "connectivity_type": "public",
            "id": "nat-02a04a39469a78561",
            "network_interface_id": "eni-04d372cef83a9379c",
            "private_ip": "10.100.1.57",
            "public_ip": "54.79.89.6",
            "subnet_id": "subnet-0bad28ab37460af29",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-nat"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-nat"
            }
          },
          "dependencies": [
            "aws_eip.jboloneip",
            "aws_subnet.jbolonpubsub2a",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jbolonprivrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:route-table/rtb-0b79af8e34c3761bd",
            "id": "rtb-0b79af8e34c3761bd",
            "owner_id": "594123181409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a04a39469a78561",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-rt"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.jboloneip",
            "aws_nat_gateway.jbolonnat",
            "aws_subnet.jbolonpubsub2a",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jbolonpubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:route-table/rtb-0e3f5273e712aeeff",
            "id": "rtb-0e3f5273e712aeeff",
            "owner_id": "594123181409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e4340c1b5b42e74",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-rt"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jbolonigw",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jbolonprivasoc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce0d739e15900463",
            "route_table_id": "rtb-0b79af8e34c3761bd",
            "subnet_id": "subnet-0c2d71a551734b827"
          },
          "dependencies": [
            "aws_eip.jboloneip",
            "aws_nat_gateway.jbolonnat",
            "aws_route_table.jbolonprivrt",
            "aws_subnet.jbolonprivsub2a",
            "aws_subnet.jbolonpubsub2a",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jbolonprivasoc4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0055cf8e0043096da",
            "route_table_id": "rtb-0b79af8e34c3761bd",
            "subnet_id": "subnet-0edc2c349fe0ab5d4"
          },
          "dependencies": [
            "aws_eip.jboloneip",
            "aws_nat_gateway.jbolonnat",
            "aws_route_table.jbolonprivrt",
            "aws_subnet.jbolonprivsub2b",
            "aws_subnet.jbolonpubsub2a",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jbolonpubasoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e5c8c70a6b35d9d",
            "route_table_id": "rtb-0e3f5273e712aeeff",
            "subnet_id": "subnet-0bad28ab37460af29"
          },
          "dependencies": [
            "aws_internet_gateway.jbolonigw",
            "aws_route_table.jbolonpubrt",
            "aws_subnet.jbolonpubsub2a",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jbolonpubasoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0323c42cc0d6a04",
            "route_table_id": "rtb-0e3f5273e712aeeff",
            "subnet_id": "subnet-0ce47cb21ad685028"
          },
          "dependencies": [
            "aws_internet_gateway.jbolonigw",
            "aws_route_table.jbolonpubrt",
            "aws_subnet.jbolonpubsub2b",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jbolonalbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:security-group/sg-0f70ff4d9ae45edab",
            "description": "SG for j.bolon ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f70ff4d9ae45edab",
            "ingress": [
              {
                "cidr_blocks": [
                  "112.201.105.205/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "skillup-jbolon-alb-sg",
            "name_prefix": "",
            "owner_id": "594123181409",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-jbolon-alb-sg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-jbolon-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jbolonbastionsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:security-group/sg-00b7f6ad8124e4d72",
            "description": "SG for j.bolon Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b7f6ad8124e4d72",
            "ingress": [
              {
                "cidr_blocks": [
                  "112.201.105.205/32"
                ],
                "description": "",
                "from_port": 6522,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6522
              }
            ],
            "name": "skillup-jbolon-bastion-sg",
            "name_prefix": "",
            "owner_id": "594123181409",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-jbolon-bastion-sg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-jbolon-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jbolonwebsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:security-group/sg-055a604c89f20f37c",
            "description": "SG for j.bolon Webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055a604c89f20f37c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6522,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b7f6ad8124e4d72"
                ],
                "self": false,
                "to_port": 6522
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f70ff4d9ae45edab"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "skillup-jbolon-web-sg",
            "name_prefix": "",
            "owner_id": "594123181409",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-jbolon-web-sg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-jbolon-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jbolonalbhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "112.201.105.205/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3162531757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f70ff4d9ae45edab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jbolonalbsg",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jbolonbastionssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "112.201.105.205/32"
            ],
            "description": "",
            "from_port": 6522,
            "id": "sgrule-1366379834",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b7f6ad8124e4d72",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6522,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jbolonbastionsg",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jbolonwebhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-850166551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-055a604c89f20f37c",
            "self": false,
            "source_security_group_id": "sg-0f70ff4d9ae45edab",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jbolonalbsg",
            "aws_security_group.jbolonwebsg",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jbolonwebssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 6522,
            "id": "sgrule-277739109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-055a604c89f20f37c",
            "self": false,
            "source_security_group_id": "sg-00b7f6ad8124e4d72",
            "timeouts": null,
            "to_port": 6522,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jbolonbastionsg",
            "aws_security_group.jbolonwebsg",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jbolondbsub2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:subnet/subnet-0870fb3c5e294a33d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.100.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0870fb3c5e294a33d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-db-2a"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-db-2a"
            },
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jbolondbsub2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:subnet/subnet-0764c518991dd533c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.100.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0764c518991dd533c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-db-2b"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-db-2b"
            },
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jbolonprivsub2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:subnet/subnet-0c2d71a551734b827",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2d71a551734b827",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-2a"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-2a"
            },
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jbolonprivsub2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:subnet/subnet-0edc2c349fe0ab5d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc2c349fe0ab5d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-2b"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-priv-2b"
            },
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jbolonpubsub2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:subnet/subnet-0bad28ab37460af29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bad28ab37460af29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-2a"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-2a"
            },
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jbolonpubsub2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:subnet/subnet-0ce47cb21ad685028",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce47cb21ad685028",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-2b"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-pub-2b"
            },
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "dependencies": [
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jbolonvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:vpc/vpc-01a846bb50064a0f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0a8e6d5d19415d54e",
            "default_route_table_id": "rtb-0e515616e6879f135",
            "default_security_group_id": "sg-0815741379c7c1d78",
            "dhcp_options_id": "dopt-a1e0f6c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a846bb50064a0f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e515616e6879f135",
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-vpc"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "jbolons3endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:594123181409:vpc-endpoint/vpce-077a8ae546d4a73bd",
            "cidr_blocks": [
              "3.5.164.0/22",
              "3.5.168.0/23",
              "52.95.128.0/21"
            ],
            "id": "vpce-077a8ae546d4a73bd",
            "owner_id": "594123181409",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b79af8e34c3761bd",
              "rtb-0e3f5273e712aeeff"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "state": "available",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-s3ep"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-j.bolon-s3ep"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01a846bb50064a0f6"
          },
          "dependencies": [
            "aws_eip.jboloneip",
            "aws_internet_gateway.jbolonigw",
            "aws_nat_gateway.jbolonnat",
            "aws_route_table.jbolonprivrt",
            "aws_route_table.jbolonpubrt",
            "aws_subnet.jbolonpubsub2a",
            "aws_vpc.jbolonvpc"
          ]
        }
      ]
    }
  ]
}